--- a/FiberBox/setups/setup_mainwid.ui
+++ b/FiberBox/setups/setup_mainwid.ui
@@ -124,7 +124,15 @@
      <property name="title">
       <string>预留</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_3"/>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <widget class="QPushButton" name="Translation">
+        <property name="text">
+         <string>Translation(English/Chinese)</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item row="3" column="0">
