--- a/PM-Register/Keygen/keygen.ui
+++ b/PM-Register/Keygen/keygen.ui
@@ -198,6 +198,9 @@
         </item>
         <item row="3" column="1" colspan="4">
          <widget class="QLineEdit" name="lineEditCustomer">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
