--- a/PM_Tool/mainPage/seripport.ui
+++ b/PM_Tool/mainPage/seripport.ui
@@ -64,7 +64,7 @@ QWidget#tab, QWidget#tab_2 {
        <attribute name="title">
         <string>服务器1</string>
        </attribute>
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>10</x>
